# Nullity-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  debug_run.sh  editor_run.sh  imgui.ini  no_editor_run.sh  release_run.sh  run.sh  run_release.sh  templight.txt
.cache/clangd/index/: FastNoiseLite.h.C9DC03D08412E795.idx  _fixes.hpp.60606A3A3E730E28.idx  _vectorize.hpp.AADE9212B31D6178.idx  camera.cpp.A7C9D21A27D7A660.idx  camera.hpp.79D8723993DEA5CB.idx  common.hpp.3989CF3B7AA92EEC.idx  components.hpp.BB82B508FEDC3E38.idx  compute_common.hpp.C5A2437FCC3286ED.idx  compute_vector_decl.hpp.7E465987F63C3B23.idx  compute_vector_relational.hpp.2411B85037112B7A.idx  constants.hpp.81C3884898FE89F9.idx  constants.inl.9A41651C223EA18B.idx  debugging.cpp.47802FA4CFB97ACC.idx  debugging.hpp.BF0B19583B7115B8.idx  engine.cpp.17ACD9F6494775EE.idx  engine.hpp.4F2A0099074E2742.idx  engine_gui.cpp.10A2EE96ECDAB4EF.idx  engine_gui.hpp.DE702F8C22795BBD.idx  epsilon.hpp.98E571D5E74EEB1D.idx  epsilon.inl.DEE6B26018BEF357.idx  exponential.hpp.49A83CC4428A6C94.idx  framebuffer.cpp.10E98D9987136E7E.idx  framebuffer.hpp.E6835FCE755242DC.idx  func_common.inl.E6042517D588B6DD.idx  func_exponential.inl.34E543FB9C2DE61B.idx  func_geometric.inl.56BB882EE1C07236.idx  func_integer.inl.A29BAF4613EA4B93.idx  func_matrix.inl.3A716D10FD7F92AC.idx  func_packing.inl.CC144B0EE174D0A5.idx  func_trigonometric.inl.7A5BB7CCFF4A64DA.idx  func_vector_relational.inl.CDBDC6072EF088F2.idx  fwd.hpp.EF1DBBD04AFF6526.idx  geometric.hpp.ACF7229F15F7B61E.idx  glad.c.E6B881D04D21AE1E.idx  glad.h.31CBC45FA75222B6.idx  glm.hpp.255476A50C543B05.idx  imconfig.h.FD07FF7638957110.idx  imgui.cpp.EACC523B245D78CA.idx  imgui.h.BC455356A47F050F.idx  imgui_demo.cpp.844C2171596AD43C.idx  (+196 more)
assets/models/Dirt/: Dirt.mtl
assets/models/Grass/: Grass.mtl
assets/shaders/: grass.vert  instanced.frag  instanced.vert  lit.vert  render_texture.frag  render_texture.vert  skybox.frag  unlit.frag
config/: keymaps.json
editor/: CMakeLists.txt  editor.hpp
editor/include/: core.hpp  editor_init.hpp  engine_gui.hpp
editor/src/: core.cpp  editor_init.cpp  engine_gui.cpp
engine/: CMakeLists.txt  engine.hpp
engine/include/: callbacks.hpp  camera.hpp  components.hpp  core.hpp  debugging.hpp  entity.hpp  framebuffer.hpp  init.hpp  input.hpp  keymap.hpp  models.hpp  primitives.hpp  render.hpp  shader.hpp  state.hpp  systems.hpp  textures.hpp  time.hpp
engine/src/: callbacks.cpp  camera.cpp  core.cpp  debugging.cpp  entity.cpp  framebuffer.cpp  init.cpp  input.cpp  keymap.cpp  models.cpp  render.cpp  shader.cpp  state.cpp  systems.cpp  textures.cpp
game/: CMakeLists.txt
game/include/: player.hpp
game/src/: main.cpp  player.cpp
game_config/: keymaps.json
include/: callbacks.hpp  camera.hpp  components.hpp  debug_output.hpp  debugging.hpp  engine.hpp  engine_gui.hpp  framebuffer.hpp  gui.hpp  init.hpp  initialization.hpp  inspector.hpp  keymap.hpp  models.hpp  player.hpp  primitives.hpp  render.hpp  shader.hpp  systems.hpp  textures.hpp  utility.hpp
models/: Dirt.mtl
models/Chair_Table/: Chair_and_Table_Scene.mtl
models/Gold_Ore_Block/: GoldOre.blend  GoldOre.blend1  GoldOre.mtl
models/flowers/: BgMD_item_fireflower01_01.dae  BgMD_item_iceflower01_01.dae
shaders/: fragment.glsl  grass.frag  instanced.frag  instanced.vert  light_source_fragment.glsl  light_source_vertex.glsl  lit.frag  render_texture_fragment.glsl  render_texture_vertex.glsl  skybox_fragment.glsl  skybox_vertex.glsl  unlit.frag  unlit.vert  vertex.glsl
src/: callbacks.cpp  camera.cpp  components.hpp  cube.hpp  debug_output.cpp  debugging.cpp  engine.cpp  engine_gui.cpp  fragment.glsl  framebuffer.cpp  framebuffer.h  helpers.hpp  init.cpp  inspector.cpp  keymap.cpp  keymap.hpp  main.cpp  models.cpp  models.hpp  player.cpp  player.hpp  primitives.hpp  render.cpp  render.hpp  render_texture_vertex.glsl  shader.cpp  shader.hpp  systems.cpp  systems.hpp  textures.cpp  textures.hpp  utility.cpp  vertex.glsl
